# tensor

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: cmake.yml
cmake/: tensorConfig.cmake.in
cmake/googletest/: CMakeLists.txt.in
include/experimental/: linear_algebra.hpp
include/experimental/linalg/: arithmetic_operators.hpp  config.hpp  dr_tensor.hpp  forward_declarations.hpp  fs_tensor.hpp  macros.hpp  private_support.hpp  subtensor.hpp  tensor.hpp  tensor_concepts.hpp  tensor_expression.hpp  tensor_memory.hpp
include/experimental/linalg/tensor_expression/: accessor_result.hpp  allocator_result.hpp  binary_tensor_expressions.hpp  layout_result.hpp  tensor_expression_traits.hpp  unary_tensor_expressions.hpp
include/experimental/linalg/tensor_expression/binary/: addition.hpp  binary_base.hpp  matrix_product.hpp  matrix_vector_product.hpp  scalar_division.hpp  scalar_modulo.hpp  scalar_postprod.hpp  scalar_preprod.hpp  subtraction.hpp  vector_matrix_product.hpp  vector_product.hpp
include/experimental/linalg/tensor_expression/unary/: conjugate.hpp  negate.hpp  transpose.hpp  unary_base.hpp
include/experimental/mdspan_extensions/: rank_one_extents_specialization.hpp
include/mdspan_extensions/: rank_one_extents_specialization.hpp
paper/: tensor.bs  tensor.html
tests/: CMakeLists.txt  binary_expressions_test.cpp  dr_tensor_test.cpp  fs_tensor_test.cpp  tensor_test.cpp  unary_expressions_test.cpp
